# course

./: .gitignore  README.md  build_subset_embeddings.py  evaluate_main.py  generate_test_set.py  getdata.py  main.py  pyproject.toml  run_web.py
docs/: MAIN_USAGE.md  PROJECT_LAYOUT.md
frontend/: README.md
frontend/public/: app.js  index.html  styles.css
src/news_rag/: agent.py  cli.py  config.py  retrieval.py  retry.py  transport.py
src/news_rag/tools/: build_subset_embeddings.py  evaluate.py  generate_test_set.py  getdata.py  web_server.py
